--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
     <!-- ------------------------main--------------------------- -->
     <main>
         <article class="todoContainer">
-            <label for="inputBox">TODO App</label>
+            <label for="inputBox">TODO App</label><br>
+            <!-- <span class="material-icons">
+                search
+            </span> -->
+            <input id="searchBox" type="text" placeholder="Searching...">
+            <hr>
             <div class="inputField">
                 <input id="inputBox" type="text" placeholder="Add your new todo">
                 <button id="btn_add"><i class="fas fa-plus"></i></button>
